tests/neg/i25531b.scala
class Rble extends Readable // error
